<resources>
    <string name="app_name">  OsloMet-Booking</string>
    <string name="title_activity_maps">OsloMet-booker</string>
    <string name="lagre">Lagre</string>
    <string name="rom">Rom</string>
    <string name="velgEtasje">Velg etasje</string>
    <string name="opprettRom">Opprett rom</string>
    <string name="slettrom">Slett rom</string>
    <string name="opprettReservasjon">Reserver</string>
    <string name="slettRom">Er du sikker på at du vil slette rommet?</string>
    <string name="slettHus">Er du sikker på at du vil slette bygningen?</string>
    <string name="avbryt">Avbryt</string>
    <string name="slettBygning">Slett bygning</string>
    <string name="husOversikt">Se oversikt</string>
    <string name="seReservasjoner">Reservasjoner</string>
    <string name="slettReservasjon">Er du sikker på at du vil slette reservasjonen?</string>
    <string name="ja">Ja</string>
    <string name="nei">Nei</string>
    <string name="velgDato">Velg dato</string>
    <string name="beskrivelse">Beskrivelse</string>
    <string name="navn">Navn</string>
    <string name="gateadresse">Gateadresse</string>
    <string name="romNr">Romnummer</string>
    <string name="kapasitet">Kapasitet</string>
    <string name="dato">Dato</string>
    <string name="tid">Tid</string>
    <string name="etasjer">Antall etasjer</string>







</resources>