<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/test2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHusOversikt"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="@drawable/knapp"
            android:text="@string/husOversikt"/>

        <Button
            android:id="@+id/btnSlettHus"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="@drawable/knapp"
            android:text="@string/slettBygning"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnSeReservasjon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/knapp"
            android:text="@string/seReservasjoner"
            android:textColor="#000000" />

    </LinearLayout>

</RelativeLayout>